# void-shooter

./: CMakeLists.txt  README.md  resources.rc
src/: main.cpp
src/assets/audio/sfx/: laser_shoot_sfx.h
src/assets/fonts/: PixelifySansRegular.h  pixel_font.h
src/assets/icon/: icon.h
src/assets/sprites/planets/earth/: earth_sprite.h
src/assets/sprites/player/: player_texture.h
src/assets/sprites/projectiles/: laser_tex.h
src/assets/sprites/thruster/: thruster_spritesheet.h
src/assets/sprites/ui/: healthbar_sprite.h
src/assets/textures/: earth_spritesheet.h  earth_texture_spritesheet.h  energybar_spritesheet.h  healthbar_spritesheet.h  purp_enemy_texture.h
src/core/: Main.cpp  Player.cpp  Player.h  UI.cpp  game.cpp  game_context.h
src/core/entities/: entity.h
src/core/entities/enemy/: enemy.cpp  enemy.h
src/core/entities/player/: player.cpp  player.h
src/core/entities/projectiles/: laser_bolt.h  projectile.cpp  projectile.h
src/core/environment/: planet.cpp  planet.h  stars.cpp  stars.h
src/core/sound/: audio-manager.cpp  audio-manager.h
src/core/system/: resource_ids.h  resource_manager.cpp
src/core/system/audio/: audio_manager.cpp  audio_manager.h
src/core/system/resource/: resource_ids.h  resource_manager.cpp  resource_manager.h
src/core/system/window/: window_manager.cpp  window_manager.h
src/core/ui/: ui.cpp  ui.h
src/entities/: entity.h
src/entities/enemy/: enemy.cpp  enemy.h
src/entities/player/: player.cpp  player.h
src/entities/projectiles/: projectile.cpp  projectile.h
src/environment/: environment.h  planet.cpp  planet.h  stars.cpp  stars.h
src/game/: game.cpp  game.h
src/headers/: Enemy.h  Entity.h  Player.h  UI.h
src/ui/: ui.cpp  ui.h
